syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.challenge.grpc";
option java_outer_classname = "FileTransferProto";

package filetransfer;

service FileTransfer {
  rpc TransferFile (FileRequest) returns (FileResponse) {}
  rpc UploadFile (FileRequest) returns (FileResponse) {} 
}

message FileRequest {
  string file_name = 1;
  string client_ip = 2;
}

message FileResponse {
  string message = 1;
}